--- a/custom/css/index.css
+++ b/custom/css/index.css
@@ -100,7 +100,7 @@ table tr td a, table tr td a:hover {
 }
 
 #banner h1 {
-	font-family: "Gilbert";
+	font-family: "CaL";
 	font-size: calc(12px + 4.5vw);
 	color: #F4FFFD;
 	padding-left: 10%;
