--- a/myblog/css/myblog.css
+++ b/myblog/css/myblog.css
@@ -54,6 +54,7 @@
 	z-index: 3;
 	overflow: auto;
 	overflow-x: hidden;
+	border-top-style: solid;
 }
 
 .items::-webkit-scrollbar-track {
@@ -70,14 +71,12 @@
 	background-color: #000000;	
 }
 
-.item, .icon {
-	width: 20vw;
-	font-size: 2vw;
+.item {
+	width: 100%;
+	font-size: calc(2vw);
+	border-bottom-style: solid;
 }
 
-.row img, .row p {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 2vw;
+.item img, .item p {
+	display: inline-block;
 }
