--- a/css/posts.css
+++ b/css/posts.css
@@ -87,8 +87,17 @@ h1 {
 }
 
 .widepic {
+	display: block;
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.widerpic {
+	display: block;
 	width: 95%;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 li p {
